[package]
name = "debugrs"
version = "0.2.2"
edition = "2021"
authors = ["Nick G. <rustycloud42@protonmail.com>"]
description = "A simple Rust logger that mimics the npm debug module."
license = "MIT"  
repository = "https://github.com/nicholasgalante1997/debugrs"
documentation = "https://docs.rs/debugrs"

[dependencies]
rand = "0.9.1"
dotenv = "0.15"
emojis = "0.6.4"
regex = "1.5"
chrono = "0.4.41"
once_cell = "1.21.3"